--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,9 @@
       "homepage": "http://discourse.invite-comm.jp"
     }
   ],
-  "abandoned": true,
+  "abandoned": "laravel/laravel",
   "require": {
-    "php": ">=5.5.9",
-    "illuminate/console": "5.2.0 - 5.4.36",
-    "illuminate/database": "5.2.0 - 5.4.36",
-    "illuminate/events": "5.2.0 - 5.4.36",
-    "illuminate/filesystem": "5.2.0 - 5.4.36",
-    "illuminate/support": "5.2.0 - 5.4.36"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.*",
-    "mockery/mockery": "^0.9",
-    "d11wtq/boris": "^1.0.10",
-    "satooshi/php-coveralls": "^2.0",
-    "fabpot/php-cs-fixer": "^1.11"
+    "php": ">=5.5.9"
   },
   "autoload": {
     "psr-0": {
